Fixes and improvements
IMPROVEMENT: Bump json-smart to latest (2.5.2)
IMPROVEMENT: On Mac app, moved all data to AppSupport folder
IMPROVEMENT: Disabled VaultService thread by default
FIX: An issue with the File Deletion Pipeline (indexing)
FIX: Appendage paths for MapDB (keyword search)
FIX: Ensure mobilebackup is in the scan folder
FIX: ZipTransfer logic to skip ZIP creation in local mode
NEW: Login rate limiting after X fail attempts
NEW: Added new Smoke Tests to catch regressions
NEW: alt-core-cli provides all functionality in a CLI
NEW: Added documentation for Indexing Pipeline